@@ -33,6 +33,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4354: Fix distutils register command.
+
 - Issue #4116: Resolve member name conflict in ScrolledCanvas.__init__.
 
 - Issue #4307: The named tuple that ``inspect.getfullargspec()`` returns now
